--- a/trunk/Example Plugins/QCtoOFImageDemo/Info.plist
+++ b/trunk/Example Plugins/QCtoOFImageDemo/Info.plist
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE plist PUBLIC "-//Apple Computer//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
+<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
 	<key>CFBundleDevelopmentRegion</key>
@@ -22,7 +22,7 @@
 	<string>1.1</string>
 	<key>QCPlugInClasses</key>
 	<array>
-		<string>QC_Plugin_TestPlugIn</string>
+		<string>QCtoOFImageDemoPlugin</string>
 	</array>
 </dict>
 </plist>
